# Amulet-Test2

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
src/amulet/test2/: __init_amulet_test2.cpp
src/amulet_test2/: __init__.py  __init_amulet_test2.cpp  amulet_test2Config.cmake  dll.hpp  test2.cpp  test2.hpp
