[build-system]
requires = [
    "setuptools >= 42",
    "wheel",
    "pybind11 ~= 2.12",
]
build-backend = "setuptools.build_meta"

[project]
name = "amulet_test2"
authors = [
    {name = "James Clare"},
]
description = "test_package2"
dynamic = ["version", "readme"]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = [
    "src",
    "submodules/Amulet-Test1/src",
]

[tool.setuptools.dynamic]
version = {attr = "amulet_test2.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
