[build-system]
requires = [
    "setuptools >= 42",
    "wheel",
    "pybind11[global] == 2.13.6",
    "amulet_test1 @ file:///D:/Github/Amulet-Test1"
]
build-backend = "setuptools.build_meta"

[project]
name = "amulet_test2"
authors = [
    {name = "James Clare"},
]
description = "test_package2"
dynamic = ["version", "readme"]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "amulet_test1 @ file:///D:/Github/Amulet-Test1"
]

[tool.setuptools.dynamic]
version = {attr = "amulet_test2.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
